--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "ciripa": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ciripa"
+    }
+  },
+  "defaultProject": "ciripa",
+  "cli": {
+    "analytics": "10be8640-3eb9-432c-a86b-ea232099e948"
+  }
 }
