--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/devextreme/dist/css/dx.common.css",
+              "node_modules/devextreme/dist/css/dx.light.css",
               "node_modules/spectre.css/src/spectre.scss",
               "src/styles/styles.scss",
               "node_modules/boxicons/css/boxicons.min.css"
