--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "boxicons": "^2.0.5",
+    "devextreme": "latest",
+    "devextreme-angular": "latest",
+    "devextreme-schematics": "^1.1.12",
     "rxjs": "~6.5.4",
     "spectre.css": "^0.5.8",
     "tslib": "^1.10.0",
@@ -34,6 +37,8 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.1.2",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "latest",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
