--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,18 @@
       "@env/*": [
         "environments/*"
       ],
+      "globalize": [
+        "../node_modules/globalize/dist/globalize"
+      ],
+      "globalize/*": [
+        "../node_modules/globalize/dist/globalize/*"
+      ],
+      "cldr": [
+        "../node_modules/cldrjs/dist/cldr"
+      ],
+      "cldr/*": [
+        "../node_modules/cldrjs/dist/cldr/*"
+      ],
       "jszip": [
         "../node_modules/jszip/dist/jszip.min.js"
       ]
