--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,8 +22,8 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "boxicons": "^2.0.5",
-    "devextreme": "latest",
-    "devextreme-angular": "latest",
+    "devextreme": "^20.1.3",
+    "devextreme-angular": "^20.1.3",
     "devextreme-schematics": "^1.1.13",
     "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.5",
