--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "devextreme": "^20.1.3",
     "devextreme-angular": "^20.1.3",
     "devextreme-schematics": "^1.2.0",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
     "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.5",
     "spectre.css": "^0.5.8",
